# slork

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
assets/example/: world.yaml
assets/saltwind_station/: world.yaml
assets/saves/example/: test.json
assets/worlds/: example.yaml  saltwind_station.yaml
docs/: yaml_world_authoring.md
docs/schema/: world.schema.json
src/slork/: ai_client.py  ai_client_ollama.py  ai_client_openai.py  ai_engine.py  ai_imagegen_openai.py  app.py  args.py  cli.py  commands.py  conditions.py  dialog.py  engine.py  images.py  logic.py  persistence.py  util.py  webapp.py  world.py
src/slork/procgen/: world_gen.py
src/slork/templates/: index.html
