[project]
name = "slork"
version = "0.3.0"
dependencies = [
    "pyyaml",
    "dacite",
    "openai",
    "flask",
    "pyreadline3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
